--- a/index.html
+++ b/index.html
@@ -236,6 +236,8 @@
           
           <form action="">
 
+            <article class="sub">
+              
             <div class="form-input-model">
               <label for="nome">Nome</label>
               <input type="text" placeholder="Name" id="nome" name="nome">
@@ -245,6 +247,8 @@
               <label for="email">E-mail</label>
               <input type="text" placeholder="E-mail" id="email" name="email">
             </div>
+
+            </article>
 
             <div class="form-input-model">
               <label for="mensagem">E-mail</label>
